--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     background-color: hsl(185, 41%, 84%);
 }
-.splitter{
+.heading{
     text-align: center;
     margin: 30px 0;
 }
@@ -25,6 +25,13 @@ body{
 }
 .left-side{
     max-width: 500px;
+    width: 250px;
+    margin: auto;
+}
+.top-bill{
+    /* width: 230px; */
+    /* max-width: 900px; */
+    position: relative;
 }
 .paragraph{
     font-size: medium;
@@ -40,8 +47,15 @@ body{
     font-size: 24px;
     direction:rtl
 }
-.select-tip{
+/* .select-tip{
     margin: 20px 0;
+    width: 230px;
+    max-width: 900px;
+} */
+.number-of-people{
+    /* width: 230px;
+    max-width: 900px; */
+    position: relative;
 }
 .buttons{
     display: grid;
@@ -76,6 +90,12 @@ body{
 }
 .profit-increase::placeholder{
     color: hsl(0, 1%, 85%);
+}
+.profit-increase:hover{
+    background-color: hsl(172, 67%, 45%);
+}
+.profit-increase:focus{
+    background-color: hsl(172, 67%, 45%);
 }
 .input-field::placeholder{
     color: hsl(172, 67%, 45%);
@@ -112,13 +132,19 @@ p.total-charge{
     border-radius: 5px;
     font-weight: 500;
 }
+.reset:hover{
+    background-color: hsl(185, 41%, 84%);
+}
+.reset:focus{
+    background-color: hsl(172, 67%, 45%);
+}
 .attribution{
     margin: 15px 0;
     padding-bottom:20px ;
 }
 .icons{
     position: absolute;
-    right: 78%;
+    right: 90%;
     margin-top: 15px;
 }
 @media (min-width: 700px) {
@@ -139,16 +165,16 @@ p.total-charge{
     .left-side{
         padding: 20px 10px;
         margin-right: 15px;
+        width: 400px;
     }
     .right-side{
        /* padding: 0 20px;  */
        /* margin-left: 15px; */
-       width: 700px;
+       width: 500px;
     }
     .buttons{
         display: grid;
-        grid-template-columns: 100px 100px 100px;
-        gap: 5px;
+        grid-template-columns: 90px 90px 90px;
     }
     .tip{
         margin-right: 80px;
@@ -166,6 +192,16 @@ p.total-charge{
         position: absolute;
         right: 93%;
         margin-top: 15px;
+    }
+    .attribution{
+        position: absolute;
+        top:80%;
+        left: 30%;
+    }
+    .heading{
+        position: absolute;
+        top: 10%;
+        left: 40%;
     }
 }
 @media (min-width: 1024px) {
@@ -188,7 +224,14 @@ p.total-charge{
     .container2{
         width: 300px;
     } 
-
-
-
+    .attribution{
+        position: absolute;
+        top:80%;
+        left: 45%;
+    }
+    .heading{
+        position: absolute;
+        top: 10%;
+        left: 45%;
+    }
 }
