--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     display: flex;
     flex-direction: column;
     margin: 10px 15px;
-    /* max-width: 100%; */
 }
 .left-side{
     max-width: 500px;
@@ -29,8 +28,6 @@ body{
     margin: auto;
 }
 .top-bill{
-    /* width: 230px; */
-    /* max-width: 900px; */
     position: relative;
 }
 .paragraph{
@@ -71,11 +68,6 @@ body{
     padding: 7px 10px;
     border-radius: 5px;
 }
-/* .custom-input{
-    background-color: hsl(183, 100%, 15%);
-    color: hsl(0, 0%, 100%);
-    width: 40%;
-} */
 .right-side{
     background-color: hsl(183, 100%, 15%);
     margin: auto;
@@ -97,12 +89,12 @@ body{
 .profit-increase:focus{
     background-color: hsl(172, 67%, 45%);
 }
-.input-field::placeholder{
+/* .input-field::placeholder{
     color: hsl(172, 67%, 45%);
     position: absolute;
-    right: 3%;
+    right: 5%;
     opacity: 0.1px;
-}
+} */
 .result{
     display: grid;
     grid-template-columns: auto auto;
@@ -141,6 +133,11 @@ p.total-charge{
 .attribution{
     margin: 15px 0;
     padding-bottom:20px ;
+    font-size: 11px; 
+    text-align: center;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
 }
 .icons{
     position: absolute;
